# pyvectorial_au

./: README.md  pyproject.toml  setup.py
pyvectorial/: __init__.py  aoeu.ipynb  aperture.py  calculation_table.py  coma_pickling.py  fortran_version.py  fragment_sputter.py  haser_fits.py  haser_params.py  haser_plots.py  hashing.py  input_transforms.py  python_version.py  rust_version.py  tests.py  timedependentproduction.py  utils.py  vectorial_model_config_writer.py  vectorial_model_result.py  vm_config.py  vm_matplotlib.py  vm_plotly.py  vmconfig.py  vmconfigread.py  vmconfigwrite.py  vmplotter.py  vmreader.py  vmresult.py  vmrunner.py  vmwriter.py
pyvectorial/deprecated/: parameters.py
pyvectorial/tests/: test_fortran_version.py  test_input_transforms.py  test_rust_version.py  test_timedependentproduction.py  test_vmconfigread.py
pyvectorial/tests/input/: .eight_runs.yaml.swp  eight_runs.yaml  fort.16  single_run.yaml  single_run_binned.yaml  single_run_gaussian.yaml  single_run_sine.yaml  single_run_square_pulse.yaml
src/pyvectorial/: __init__.py  aperture.py  calculation_table.py  column_density_abel.py  encoding_and_hashing.py  fortran_version.py  haser_params.py  hashing.py  input_transforms.py  interpolation.py  pickle_encoding.py  rust_version.py  timedependentproduction.py  vectorial_model_calculation.py  vectorial_model_config.py  vectorial_model_config_reader.py  vectorial_model_config_writer.py  vectorial_model_result.py  vectorial_model_runner.py  vm_matplotlib.py
src/pyvectorial/aperture/: aperture.py
src/pyvectorial/backends/: __init__.py  fortran_version.py  python_version.py  rust_version.py
src/pyvectorial/db/: vectorial_model_cache.py  vmcache.db
src/pyvectorial/encoding/: encoding_and_hashing.py
src/pyvectorial/graphing/: __init__.py  haser_matplotlib.py  vm_matplotlib.py  vm_plotly.py
src/pyvectorial/haser/: haser_fits.py
src/pyvectorial/model_output/: vectorial_model_runner.py
src/pyvectorial/post_model_processing/: interpolation.py
src/pyvectorial/pre_model_processing/: input_transforms.py  timedependentproduction.py
src/pyvectorial/scripts/: fragment_sputter_to_coldens.py  model_compare.py  oneshot.py
src/pyvectorial_au/: __init__.py
(+78 files in other folders)
