[tool.poetry]
name = "pyvectorial_au"
version = "1.0.1"
description = "Utilities for running, saving, and interfacing with cometary vectorial models, like the one included in sbpy"
authors = ["Shawn Oset <szo0032@auburn.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
dill = ">=0.3.7"
numpy = ">=1.26.2"
matplotlib = ">=3.8.2"
plotly = ">=5.18.0"
pyabel = ">=0.9.0"
pytest-cov = "^4.1.0"
sbpy = "^0.4.0"
pandas = "^2.1.3"
pydantic = "^2.5.2"
returns = "^0.22.0"
rich = "^13.7.0"
sqlalchemy = "^2.0.24"

[tool.poetry.scripts]

[tool.poetry.dev-dependencies]
pytest = ">=7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
